TestCases/ASTTests/SemanticErrorsTests/tests/test33.c
int main()
{
    int main = 3; // This shouldn't return an error!
    return 0;
}